; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/p2p/extr_p2p_group.c_p2p_group_notif_noa.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/p2p/extr_p2p_group.c_p2p_group_notif_noa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.p2p_group = type { i32, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @p2p_group_notif_noa(%struct.p2p_group* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.p2p_group*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store %struct.p2p_group* %0, %struct.p2p_group** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i32*, i32** %6, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %17

10:                                               ; preds = %3
  %11 = load %struct.p2p_group*, %struct.p2p_group** %5, align 8
  %12 = getelementptr inbounds %struct.p2p_group, %struct.p2p_group* %11, i32 0, i32 1
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %14 = call i32 @wpabuf_free(%struct.TYPE_5__* %13)
  %15 = load %struct.p2p_group*, %struct.p2p_group** %5, align 8
  %16 = getelementptr inbounds %struct.p2p_group, %struct.p2p_group* %15, i32 0, i32 1
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %16, align 8
  br label %66

17:                                               ; preds = %3
  %18 = load %struct.p2p_group*, %struct.p2p_group** %5, align 8
  %19 = getelementptr inbounds %struct.p2p_group, %struct.p2p_group* %18, i32 0, i32 1
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %19, align 8
  %21 = icmp ne %struct.TYPE_5__* %20, null
  br i1 %21, label %22, label %48

22:                                               ; preds = %17
  %23 = load %struct.p2p_group*, %struct.p2p_group** %5, align 8
  %24 = getelementptr inbounds %struct.p2p_group, %struct.p2p_group* %23, i32 0, i32 1
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %24, align 8
  %26 = call i64 @wpabuf_size(%struct.TYPE_5__* %25)
  %27 = load i64, i64* %7, align 8
  %28 = icmp uge i64 %26, %27
  br i1 %28, label %29, label %40

29:                                               ; preds = %22
  %30 = load %struct.p2p_group*, %struct.p2p_group** %5, align 8
  %31 = getelementptr inbounds %struct.p2p_group, %struct.p2p_group* %30, i32 0, i32 1
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  store i64 0, i64* %33, align 8
  %34 = load %struct.p2p_group*, %struct.p2p_group** %5, align 8
  %35 = getelementptr inbounds %struct.p2p_group, %struct.p2p_group* %34, i32 0, i32 1
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %35, align 8
  %37 = load i32*, i32** %6, align 8
  %38 = load i64, i64* %7, align 8
  %39 = call i32 @wpabuf_put_data(%struct.TYPE_5__* %36, i32* %37, i64 %38)
  br label %47

40:                                               ; preds = %22
  %41 = load %struct.p2p_group*, %struct.p2p_group** %5, align 8
  %42 = getelementptr inbounds %struct.p2p_group, %struct.p2p_group* %41, i32 0, i32 1
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %42, align 8
  %44 = call i32 @wpabuf_free(%struct.TYPE_5__* %43)
  %45 = load %struct.p2p_group*, %struct.p2p_group** %5, align 8
  %46 = getelementptr inbounds %struct.p2p_group, %struct.p2p_group* %45, i32 0, i32 1
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %46, align 8
  br label %47

47:                                               ; preds = %40, %29
  br label %48

48:                                               ; preds = %47, %17
  %49 = load %struct.p2p_group*, %struct.p2p_group** %5, align 8
  %50 = getelementptr inbounds %struct.p2p_group, %struct.p2p_group* %49, i32 0, i32 1
  %51 = load %struct.TYPE_5__*, %struct.TYPE_5__** %50, align 8
  %52 = icmp ne %struct.TYPE_5__* %51, null
  br i1 %52, label %65, label %53

53:                                               ; preds = %48
  %54 = load i32*, i32** %6, align 8
  %55 = load i64, i64* %7, align 8
  %56 = call %struct.TYPE_5__* @wpabuf_alloc_copy(i32* %54, i64 %55)
  %57 = load %struct.p2p_group*, %struct.p2p_group** %5, align 8
  %58 = getelementptr inbounds %struct.p2p_group, %struct.p2p_group* %57, i32 0, i32 1
  store %struct.TYPE_5__* %56, %struct.TYPE_5__** %58, align 8
  %59 = load %struct.p2p_group*, %struct.p2p_group** %5, align 8
  %60 = getelementptr inbounds %struct.p2p_group, %struct.p2p_group* %59, i32 0, i32 1
  %61 = load %struct.TYPE_5__*, %struct.TYPE_5__** %60, align 8
  %62 = icmp eq %struct.TYPE_5__* %61, null
  br i1 %62, label %63, label %64

63:                                               ; preds = %53
  store i32 -1, i32* %4, align 4
  br label %71

64:                                               ; preds = %53
  br label %65

65:                                               ; preds = %64, %48
  br label %66

66:                                               ; preds = %65, %10
  %67 = load %struct.p2p_group*, %struct.p2p_group** %5, align 8
  %68 = getelementptr inbounds %struct.p2p_group, %struct.p2p_group* %67, i32 0, i32 0
  store i32 1, i32* %68, align 8
  %69 = load %struct.p2p_group*, %struct.p2p_group** %5, align 8
  %70 = call i32 @p2p_group_update_ies(%struct.p2p_group* %69)
  store i32 0, i32* %4, align 4
  br label %71

71:                                               ; preds = %66, %63
  %72 = load i32, i32* %4, align 4
  ret i32 %72
}

declare dso_local i32 @wpabuf_free(%struct.TYPE_5__*) #1

declare dso_local i64 @wpabuf_size(%struct.TYPE_5__*) #1

declare dso_local i32 @wpabuf_put_data(%struct.TYPE_5__*, i32*, i64) #1

declare dso_local %struct.TYPE_5__* @wpabuf_alloc_copy(i32*, i64) #1

declare dso_local i32 @p2p_group_update_ies(%struct.p2p_group*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
